--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
     },
     "ENABLE_GEOIP_PLUGIN": {
       "description": "GeoIP attaches location information to collections that has 'ip' attribute.",
-      "value": "true"
+      "value": "false"
     },
     "GEOIP_DATABASE_URL": {
       "description": "Maxmind GeoIP database url. Community version of Maxmind GeoIP is used by default but you can also provide your database URL",
@@ -37,7 +37,7 @@
     },
     "ENABLE_CUSTOM_DATA_SOURCES": {
       "description": "Access data from your database",
-      "value": "true"
+      "value": "false"
     },
     "ALLOW_PROJECT_DELETION": {
       "description": "Allow deleting project",
@@ -45,19 +45,67 @@
     },
     "ENABLE_EVENT_EXPLORER_PLUGIN": {
       "description": "Event explorer plugin subscribes event streams and notifies new events to you in real-time.",
-      "value": "true"
+      "value": "false"
     },
     "ENABLE_FUNNEL_PLUGIN": {
       "description": "Funnel plugin depends on user attribute of events and allows you to run funnel queries.",
-      "value": "true"
+      "value": "false"
     },
     "ENABLE_USER_PLUGIN": {
       "description": "Enable user attribution module",
-      "value": "true"
+      "value": "false"
     },
     "ENABLE_RETENTION_ANALYSIS_PLUGIN": {
       "description": "Retention analysis plugin depends on user attribute of events and allows you to run retention queries.",
-      "value": "true"
+      "value": "false"
+    },
+    "module_website_mapper": {
+      "description": "module_website_mapper",
+      "value": "false"
+    },
+    "module_website_mapper_user_agent": {
+      "description": "module_website_mapper_user_agent",
+      "value": "false"
+    },
+    "module_website_mapper_referrer": {
+      "description": "module_website_mapper_referrer",
+      "value": "false"
+    },
+    "ui_enable": {
+      "description": "ui_enable",
+      "value": "false"
+    },
+    "automation_enabled": {
+      "description": "automation_enabled",
+      "value": "false"
+    },
+    "company_name": {
+      "description": "company_name",
+      "value": "false"
+    },
+    "tasks_enable": {
+      "description": "tasks_enable",
+      "value": "false"
+    },
+    "webhook_enable": {
+      "description": "webhook_enable",
+      "value": "false"
+    },
+    "event_stream_enabled": {
+      "description": "event_stream_enabled",
+      "value": "false"
+    },
+    "event_ab-testing_enabled": {
+      "description": "event_ab-testing_enabled",
+      "value": "false"
+    },
+    "real-time_enabled": {
+      "description": "real-time_enabled",
+      "value": "false"
+    },
+    "plugin_user_enable_user_mapping": {
+      "description": "plugin_user_enable_user_mapping",
+      "value": "false"
     }
   }
 }
